2005-08-19  Fernando Perez  <Fernando.Perez@colorado.edu>

	* tools/ipsvnc (svnversion): fix svnversion capture.

	* IPython/iplib.py (InteractiveShell.__init__): Add has_readline
	attribute to self, which was missing.  Before, it was set by a
	routine which in certain cases wasn't being called, so the
	instance could end up missing the attribute.  This caused a crash.
	Closes http://www.scipy.net/roundup/ipython/issue40.

2005-08-16  Fernando Perez  <fperez@colorado.edu>

	* IPython/ultraTB.py (VerboseTB.text): don't crash if object
	contains non-string attribute.  Closes
	http://www.scipy.net/roundup/ipython/issue38.

2005-08-14  Fernando Perez  <fperez@colorado.edu>

	* tools/ipsvnc: Minor improvements, to add changeset info.

2005-08-12  Fernando Perez  <fperez@colorado.edu>

	* IPython/iplib.py (runsource): remove self.code_to_run_src
	attribute.  I realized this is nothing more than
	'\n'.join(self.buffer), and having the same data in two different
	places is just asking for synchronization bugs.  This may impact
	people who have custom exception handlers, so I need to warn
	ipython-dev about it (F. Mantegazza may use them).

2005-07-29  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/genutils.py: fix 2.2 compatibility (generators)

2005-07-18  Fernando Perez  <fperez@colorado.edu>

	* IPython/genutils.py (get_home_dir): fix to help users with
	invalid $HOME under win32.

2005-07-17  Fernando Perez  <fperez@colorado.edu>

	* IPython/Prompts.py (str_safe): Make unicode-safe.  Also remove
	some old hacks and clean up a bit other routines; code should be
	simpler and a bit faster.

	* IPython/iplib.py (interact): removed some last-resort attempts
	to survive broken stdout/stderr.  That code was only making it
	harder to abstract out the i/o (necessary for gui integration),
	and the crashes it could prevent were extremely rare in practice
	(besides being fully user-induced in a pretty violent manner).
